[package]
name = "abstract_integers"
version = "0.1.1"
authors = ["Denis Merigoux <denis.merigoux@gmail.com>"]
description = "Defining specification-friendly bounded natural integer types"
repository = "https://github.com/denismerigoux/rust-abstract-integers"
edition = "2018"
keywords = ["integers", "specification"]
license = "Apache-2.0"
readme = "README.md"

[lib]
name = "uint"
path = "src/uint.rs"
proc-macro = true

[dependencies]
num = "0.2"
syn = "0.14"
quote = "0.6"
